# straylight-llm

./: .buckconfig  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  continuity.lean  flake.nix  master-spec.md  requests-for-hydrogen.md  run-uring.sh
dev/: flake-module.nix
dhall/: Action.dhall  Build.dhall  Platform.dhall  (+2 more)
effect-monad-912/: CHANGELOG-0.9.md  effect-monad.cabal
effect-monad-912/src/Control/: Coeffect.hs  Effect.hs
effect-monad-912/src/Control/Coeffect/: Do.hs
effect-monad-912/src/Control/Effect/: Cond.hs  Counter.hs  Do.hs  Maybe.hs  Parameterised.hs  ParameterisedAsGraded.hs  Reader.hs  State.hs  Update.hs  Vector.hs  WriteOnceWriter.hs  Writer.hs
effect-monad-912/src/Control/Effect/Helpers/: List.hs
effect-monad-912/src/Control/Effect/Parameterised/: SafeFiles.hs
gateway/: BUCK  LICENSE  cabal.project  openapi.yaml  package.nix  straylight-llm.cabal
gateway-old/: package.nix  straylight-llm.cabal
gateway-old/app/: Main.hs
gateway-old/src/Straylight/: Coeffect.hs  Config.hs  GradedMonad.hs  Router.hs  Server.hs  Streaming.hs  Types.hs
gateway-old/src/Straylight/Endpoints/: Chat.hs  Health.hs  Models.hs
gateway-old/src/Straylight/Middleware/: Errors.hs  Logging.hs
gateway-old/src/Straylight/Providers/: Base.hs  Cgp.hs  OpenRouter.hs
gateway-old/test/: Main.hs
gateway-old/test/property/: Main.hs
gateway-old/test/property/Test/Straylight/Property/: Coeffect.hs  Generators.hs  Types.hs
gateway-old/test/unit/: Main.hs
gateway-old/test/unit/Test/Straylight/: Coeffect.hs  Config.hs  Router.hs  Types.hs
gateway/app/: Main.hs
gateway/bench/: Main.hs
gateway/bench/Bench/: CircuitBreaker.hs  Coeffect.hs  E2ELatency.hs  Router.hs  SSEBroadcaster.hs
gateway/cbits/: tokenizers_c.cpp  tokenizers_c.h
gateway/dhall/: BUILD.dhall  Config.dhall  Provider.dhall  config.dhall
gateway/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
gateway/dist-newstyle/packagedb/ghc-9.10.3/: package.cache
gateway/load-tests/: README.md  chat-completions.js  embeddings.js  streaming.js
gateway/src/: Api.hs  Config.hs  Handlers.hs  Log.hs  Middleware.hs  RateAggregator.hs  Router.hs  State.hs  Types.hs
gateway/src/Agent/: Agent.hs  Types.hs
gateway/src/Api/: Experimental.hs  File.hs  Message.hs  Pty.hs  Session.hs  Tui.hs  Types.hs
gateway/src/Bus/: Bus.hs  Event.hs
gateway/src/Coeffect/: Discharge.hs  Types.hs
gateway/src/Config/: Config.hs  Types.hs
gateway/src/Effects/: Do.hs  Grade.hs  Graded.hs
gateway/src/Evring/: Event.hs  Handle.hs  Machine.hs  Ring.hs  Sigil.hs  Trace.hs  Wai.hs  Zmtp.hs
gateway/src/Evring/Wai/: Conn.hs  Loop.hs  MultiCore.hs  MultiCoreRR.hs  Pool.hs  Server.hs
gateway/src/Experimental/: Worktree.hs
gateway/src/Find/: Parse.hs  Search.hs
gateway/src/Formatter/: Status.hs
gateway/src/Global/: Event.hs
gateway/src/Health/: Build.hs
gateway/src/LLM/: Anthropic.hs  OpenRouter.hs  Types.hs
gateway/src/Lsp/: Store.hs
gateway/src/Message/: Parts.hs  Todo.hs  Types.hs
gateway/src/Observability/: Logging.hs  Tracing.hs
gateway/src/Path/: Build.hs
gateway/src/Project/: Build.hs  Discovery.hs
gateway/src/Prompt/: Async.hs
gateway/src/Provider/: Anthropic.hs  Baseten.hs  Cerebras.hs  DeepInfra.hs  Fireworks.hs  Groq.hs  LambdaLabs.hs  Modal.hs  ModelIntelligence.hs  ModelRegistry.hs  Novita.hs  OAuth.hs  OpenRouter.hs  Provider.hs  RunPod.hs  SambaNova.hs  Together.hs  Triton.hs  Types.hs  VastAI.hs  Venice.hs  Vertex.hs
gateway/src/Proxy/: Proxy.hs  Types.hs
gateway/src/Pty/: Connect.hs  Parse.hs  Pty.hs  Types.hs
gateway/src/Request/: Store.hs
gateway/src/Resilience/: Backpressure.hs  Cache.hs  CircuitBreaker.hs  Metrics.hs  RateLimiter.hs  Retry.hs
gateway/src/Sandbox/: Sandbox.hs  Types.hs
gateway/src/Security/: CommandInjection.hs  ConstantTime.hs  ObservabilitySanitization.hs  OutputValidation.hs  PromptInjection.hs  RequestLimits.hs  RequestSanitization.hs  ResponseSanitization.hs  WalletExfiltration.hs
gateway/src/Session/: Session.hs  Status.hs  Types.hs
gateway/src/Skill/: Skill.hs
gateway/src/Slide/: Chunk.hs  HotTable.hs  Model.hs  Parse.hs  Tokenizer.hs
gateway/src/Slide/Tokenizer/: FFI.hs
gateway/src/Slide/Wire/: Decode.hs  Encode.hs  Frame.hs  Types.hs  Varint.hs
gateway/src/Storage/: Storage.hs
gateway/src/Streaming/: Events.hs  SigilBridge.hs
gateway/src/Telemetry/: ClickHouse.hs
gateway/src/Tool/: Defs.hs  Exec.hs  Tool.hs  Types.hs
gateway/src/Transport/: Zmq.hs  ZmqInbound.hs  ZmqServer.hs
gateway/src/Tui/: Store.hs
gateway/src/Types/: Anthropic.hs
gateway/src/Vcs/: Diff.hs  Status.hs
gateway/test/: ApiCompatibilitySpec.hs  Main.hs  Spec.hs
gateway/test/Adversarial/: InjectionEdgeCases.hs  ProviderErrors.hs  RaceConditions.hs  XSSVectors.hs  ZmqTransport.hs
gateway/test/Formal/: ProofCorrespondence.hs
gateway/test/Integration/: ApiCompliance.hs  ApiComplianceTest.hs  ApiTests.hs  HaskemathesisTest.hs  LifecycleTests.hs  LoggingTests.hs  OpenApiSpec.hs  ProofTests.hs  RateLimiterTests.hs  ServerComparison.hs  TestServer.hs  TracingTests.hs  WaiDebugTest.hs
gateway/test/Property/: AgentProps.hs  BusProps.hs  ClickHouseProps.hs  CoeffectProps.hs  ConfigProps.hs  DiffProps.hs  EventProps.hs  ExperimentalProps.hs  FindParseProps.hs  FormatterProps.hs  Generators.hs  GradedMonadProps.hs  HandlerProps.hs  HealthProps.hs  LLMProps.hs  LoadTestProps.hs  LspProps.hs  MessagePartProps.hs  MessageProps.hs  OAuthProps.hs  OpenApiProps.hs  OutputValidationProps.hs  PathProps.hs  ProjectDiscoveryProps.hs  ProjectProps.hs  PromptAsyncProps.hs  ProviderProps.hs  PtyProps.hs  RequestProps.hs  SecurityProps.hs  SessionProps.hs  SessionStatusProps.hs  SigilProps.hs  SkillProps.hs  StorageProps.hs  StreamingProps.hs  TodoProps.hs  ToolProps.hs  TuiProps.hs  TypesProps.hs  (+1 more)
gateway/test/Unit/: ApiSpec.hs
io-uring/: io-uring.cabal
io-uring/cbits/: uring_compat.c
io-uring/src/System/: IoUring.hs
io-uring/src/System/IoUring/: URing.hs
io-uring/src/System/IoUring/Internal/: FFI.hs
(+14911 files in other folders)
