cabal-version: 3.0
name:          straylight-llm
version:       0.1.0.0
synopsis:      LiteLLM-style OpenAI-compatible LLM gateway proxy
description:
  Haskell implementation of a LiteLLM-style OpenAI-compatible proxy.
  Routes requests through a provider fallback chain.
  .
  Provider priority:
  .
  * Venice AI (primary) — use Venice credits first
  * Vertex AI (GCP) (secondary) — use GCP credits second
  * Baseten (tertiary) — fall back to Baseten third
  * OpenRouter (final fallback) — only if all others fail
  .
  Endpoints:
  .
  * POST /v1/chat/completions
  * POST /v1/completions
  * POST /v1/embeddings
  * GET  /v1/models
  * GET  /health

license:       MIT
license-file:  LICENSE
author:        Weyl AI
maintainer:    dev@weyl.ai
copyright:     2026 Weyl AI
category:      Web, AI
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/weyl-ai/straylight-llm.git

-- ════════════════════════════════════════════════════════════════════════════
--                                                                  // library
-- ════════════════════════════════════════════════════════════════════════════

library
  exposed-modules:
    -- // core
    Api
    Config
    Handlers
    Router
    Types
    -- // effects (Phase 2)
    Effects.Graded
    -- // coeffects (Phase 3)
    Coeffect.Types
    Coeffect.Discharge
    -- // resilience
    Resilience.Cache
    -- // providers
    Provider.Types
    Provider.ModelRegistry
    Provider.Venice
    Provider.Vertex
    Provider.Baseten
    Provider.OpenRouter
    Provider.Anthropic
    -- // provider types
    Types.Anthropic
    -- // evring (state machine abstraction)
    Evring.Event
    Evring.Handle
    Evring.Machine
    Evring.Ring
    Evring.Sigil
    Evring.Trace
    -- // slide (wire protocol)
    Slide.Parse
    Slide.Wire.Types
    Slide.Wire.Varint
    -- // resilience (additional)
    Resilience.Backpressure
    Resilience.CircuitBreaker
    Resilience.Metrics
    Resilience.Retry
    -- // security
    Security.ConstantTime
    Security.ObservabilitySanitization
    Security.PromptInjection
    Security.RequestLimits
    Security.RequestSanitization
    Security.ResponseSanitization
    -- // streaming (SSE events)
    Streaming.Events

  hs-source-dirs:     src
  default-language:   GHC2021

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Werror
    -O2

  build-depends:
    , aeson               >=2.0
    , base                >=4.17 && <5
    , base16-bytestring   >=1.0
    , bytestring          >=0.11
    , containers          >=0.6
    , crypton             >=0.30
    , deepseq             >=1.4
    , directory           >=1.3
    , http-client
    , http-client-tls
    , http-types          >=0.12
    , megaparsec          >=9.0
    , memory              >=0.18
    , mtl                 >=2.2
    , process             >=1.6
    , random              >=1.2
    , servant             >=0.20
    , servant-server      >=0.20
    , stm                 >=2.5
    , text                >=2.0
    , time                >=1.12
    , uuid                >=1.3
    , vector              >=0.12
    , wai                 >=3.2
    , warp                >=3.3

  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    DerivingStrategies
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeOperators

-- ════════════════════════════════════════════════════════════════════════════
--                                                               // executable
-- ════════════════════════════════════════════════════════════════════════════

executable straylight-llm
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021

  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -O2
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"

  build-depends:
    , base             >=4.17 && <5
    , http-types
    , servant-server
    , straylight-llm
    , text
    , wai
    , warp

  default-extensions:
    OverloadedStrings
    RecordWildCards

-- ════════════════════════════════════════════════════════════════════════════
--                                                               // test suite
-- ════════════════════════════════════════════════════════════════════════════

test-suite straylight-llm-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021

  ghc-options:
    -Wall
    -Wcompat
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  other-modules:
    -- // property tests
    Property.TypesProps
    Property.CoeffectProps
    Property.GradedMonadProps
    Property.Generators
    Property.SecurityProps
    Property.StreamingProps
    -- // integration tests
    Integration.TestServer
    Integration.ApiTests
    Integration.ProofTests
    Integration.LifecycleTests
    Integration.OpenApiSpec
    -- // adversarial tests
    Adversarial.RaceConditions
    Adversarial.InjectionEdgeCases
    Adversarial.ProviderErrors
    -- // formal tests
    Formal.ProofCorrespondence

  build-depends:
    , aeson
    , async                       >=2.2
    , base                        >=4.17 && <5
    , bytestring
    , containers
    , haskemathesis
    , hedgehog                    >=1.0
    , http-client
    , http-client-tls
    , http-types
    , insert-ordered-containers
    , openapi3                    >=3.2
    , servant-server
    , stm                         >=2.5
    , straylight-llm
    , tasty                       >=1.4
    , tasty-hedgehog              >=1.4
    , tasty-hunit                 >=0.10
    , text
    , time
    , vector
    , wai
    , warp
    , yaml                        >=0.11

  -- n.b. haskemathesis is included via cabal.project local path.
  -- For CI without local checkout, use flake input or source-repository-package.

  default-extensions:
    OverloadedStrings
    RecordWildCards

-- ════════════════════════════════════════════════════════════════════════════
--                                                              // benchmarks
-- ════════════════════════════════════════════════════════════════════════════

benchmark straylight-llm-bench
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench
  default-language: GHC2021

  ghc-options:
    -Wall
    -Wcompat
    -O2
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"

  other-modules:
    Bench.Router
    Bench.CircuitBreaker
    Bench.SSEBroadcaster
    Bench.Coeffect
    Bench.E2ELatency

  build-depends:
    , aeson
    , async                       >=2.2
    , base                        >=4.17 && <5
    , bytestring
    , containers
    , criterion                   >=1.6
    , deepseq                     >=1.4
    , http-client
    , http-client-tls
    , http-types                  >=0.12
    , random                      >=1.2
    , stm                         >=2.5
    , straylight-llm
    , text
    , time
    , vector
    , wai                         >=3.2
    , warp                        >=3.3

  default-extensions:
    BangPatterns
    OverloadedStrings
    RecordWildCards
